--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,7 +5,7 @@ sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist.
+Sorry, but the page you were trying to view is experiencing some trouble. Try to reload the page.
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
